<resources>
    <string name="app_name">SkipOut</string>
    <string name="facebook_app_id">156074315126766</string>
    <string name="fb_login_protocol_scheme">fb156074315126766</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="app_name1">SkipOut</string>
    <string name="moto">App Base Commuter Shuttle</string>
    <string name="login_small">Login</string>
    <string name="create_account">Create Account</string>
    <string name="continueNe">CONTINUE</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_phone_number">Verify Phone</string>
    <string name="register">Register</string>
    <string name="_4_digit_code_is_sent_as_an_sms_to_your_phone">4 digit code is sent as an SMS to your phone</string>
    <string name="resend_code">Resend Code</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="explore_routes">Explore Routes</string>
    <string name="help_or_faq">Help &amp; FAQ</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="my_passes">My Passes</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_favorite_trips">Favorite Trips</string>
    <string name="my_trips">My Trips</string>
    <string name="schedule">SCHEDULED</string>
    <string name="complete">COMPLETED</string>
    <string name="purchased">PURCHASED</string>
    <string name="available">AVAILABLE</string>
    <string name="passes">Passes</string>
    <string name="favorite_trips">Favorite Trips</string>
    <string name="wallet">Wallet</string>
    <string name="invite">Invite</string>
    <string name="amount">Amount ($)</string>
    <string name="it_s_quick_safe_and_secure">It’s Quick, Safe and Secure</string>
    <string name="add_money">Add Money</string>
    <string name="available_balance">Available Balance</string>
    <string name="transactionHistory">Transaction History</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="share_it_with_your_friends_and_they_will_get_discount_off_on_their_first_booking_every_time_someone_uses_your_code_you_will_also_get_some_discount">Share it with your friends and they will get discount off on their first booking. Every time someone uses your code, you will also get some discount.</string>
    <string name="your_code">Your Code</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone">Phone</string>
    <string name="reviewFleet">Review Trip</string>
    <string name="add_to_favourites">ADD TO FAVORITES</string>
    <string name="care_to_give_a_complement">Care to give a complement...</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_via_facebook">CONTINUE VIA FACEBOOK</string>
    <string name="please_enter_email_id">Please enter email id</string>
    <string name="please_enter_valid_email_id">Please enter valid email id</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_phone_umber">Please enter phone number</string>
    <string name="source_location">Source Location</string>
    <string name="destination">Choose a Destination</string>
    <string name="browse_linqs">BROWSE SHUTTLE</string>
    <string name="route_details">Route Details</string>
    <string name="map_view">MAP VIEW</string>
    <string name="list_view">LIST VIEW</string>
    <string name="book_my_trip">Book My Trip</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="continueToPayment">Continue To Payment</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="Card">Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="add_new_card">Add New Card</string>
    <string name="pay_">PAY $</string>
    <string name="select_card">Select Card</string>
    <string name="add_card">Add Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiary_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="name_on_card">Name on Card</string>
    <string name="save">Save</string>
    <string name="per_ride_20">Per Ride $20</string>
    <string name="completed">Completed</string>
    <string name="city_linq">City Linq</string>
    <string name="provide_permissions">Please provide permissions</string>
    <string name="pay">PAY</string>
    <string name="cancel">CANCEL</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="payment">Payment</string>
    <string name="please_enter_amount">Please enter some amount</string>
    <string name="reciept">Receipt</string>
    <string name="change_number">Change Number</string>
    <string name="add_mobile_number">Add Mobile Number</string>

    <string name="term_condition1">"By continuing, you agree to "</string>
    <string name="term_condition2">Terms &amp; Conditions</string>
    <string name="cancel_trip">CANCEL TRIP</string>
    <string name="book_another_trip">BOOK ANOTHER TRIP</string>
    <string name="view_trip">View Trip</string>
    <string name="submit">Submit</string>
    <string name="add_code">ADD PROMO CODE</string>
    <string name="logout">Logout</string>
    <string name="bt_other_options">Other Payment Options</string>
    <string name="origin">Origin</string>
    <string name="refer">Refer</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="about_us">About Us</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="swap">Reverse Station</string>
    <string name="no_route">No Route</string>
    <string name="select_city">Select City</string>
    <string name="change_city">Change Default City</string>
    <string name="select_pass" >Select a Pass</string>
    <string name="apply_pass">Apply Pass</string>
    <string name="track_linqs">Track Linq</string>
</resources>
