<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"  android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/sans_pro_semi_bold"
                android:padding="16dp"
                android:background="@android:color/transparent"
                android:text="@string/wallet_balance"
                android:textColor="@color/textColorDark"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textViewWalletBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sans_pro_semi_bold"
                android:drawablePadding="8dp"
                android:gravity="right"
                android:padding="16dp"
                android:text="$34"
                android:textColor="@color/moneyColor"
                android:textSize="16dp" />
        </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textViewCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:drawablePadding="8dp"
            android:fontFamily="@font/sans_pro_semi_bold"
            android:padding="16dp"
            android:text="@string/amount_payable"
            android:textColor="@color/textColorDark"
            android:textSize="16dp" />

            <TextView
                android:id="@+id/textViewAmountPayable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sans_pro_semi_bold"
                android:drawablePadding="8dp"
                android:gravity="right"
                android:padding="16dp"
                android:text="$34"
                android:textColor="@color/moneyColor"
                android:textSize="16dp" />
        </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textViewNetBanking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawablePadding="8dp"
            android:fontFamily="@font/sans_pro_semi_bold"
            android:padding="16dp"
            android:background="@android:color/transparent"
            android:text="@string/remaining_balance"
            android:textColor="@color/textColorDark"
            android:textSize="16dp" />
            <TextView
                android:id="@+id/textViewRemainingBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sans_pro_semi_bold"
                android:drawablePadding="8dp"
                android:gravity="right"
                android:padding="16dp"
                android:text="$34"
                android:textColor="@color/moneyColor"
                android:textSize="16dp" />
        </RelativeLayout>

        <!--<View-->
            <!--android:id="@+id/line4"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0.7dp"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:background="@color/lineGrey" />-->



        <!--<View-->
            <!--android:id="@+id/line5"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0.7dp"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:background="@color/lineGrey" />-->


    </LinearLayout>

